--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1 id=contentheader>About Me</h1>
         <hr>
         <div class="indexcontent clearfix">
-            <img src="https://via.placeholder.com/200">
+            <div class="indeximage"><img src="https://via.placeholder.com/200"> </div>
             <p id="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, natus molestias?
                 Tempore ab
                 esse,
